# goblocks

./: .gitignore  README.md  citation.cff
client/: MANIFEST.in  pyproject.toml
client/src/: goblocks_client.py
server/src/: Makefile  caches.go  compute_derivs.go  compute_derivs_gpu_test.go  compute_derivs_test.go  compute_points.go  compute_points_benchmark_test.go  data_structs.go  deriv_helpers.go  deriv_helpers_test.go  expansion_helpers.go  go.mod  go.sum  helper_functions.go  io.go  library.go  main.go  main_build_cache_test.go  phi1.go  phi1_test.go  poles.go  test_helpers_test.go  transforms.go
server/src/gpu_iterative/: Makefile  data_structs.go  gpu_iterative.go  gpu_rmatrix.go  gpu_stub.go  iterative_update.cu  rmatrix_kernel.cu
