[project]
name = "goblocks-client"
version = "0.1.0"
description = "Python client for communicating with the goblocks server"
authors = [
    { name = "Alexander Stapleton", email = "a.g.stapleton@qmul.ac.uk" }
]
license = { text = "GPL-2.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

